--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
@@ -25,7 +26,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDgh8T31gGHDwa_OR-9O_keUPTXfjQo8Zs" />
+            android:value="AIzaSyBwhwpxhz_rq-Qe9JnHgpxvM-ujbkrvDn4" />
     </application>
 
 </manifest>
