--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sabzishoppidriverapp">
 
     <!--
@@ -17,21 +18,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
-
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.map_activity.MapsActivity" />
         <activity
-            android:name=".ui.map_activity.MapsActivity"></activity>
-        <activity android:name=".ui.activity.SplashActivity">
+            android:name=".ui.activity.SplashActivity"
+            android:theme="@style/AppTheme.Base">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,12 +33,15 @@
         </activity>
         <activity android:name=".ui.activity.OtpActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
-        <activity android:name=".ui.activity.MainActivity"/>
+        <activity android:name=".ui.activity.MainActivity" />
+        <activity
+            android:name=".ui.activity.DeliveryListActivity"
+            android:label="Job list" />
 
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBwhwpxhz_rq-Qe9JnHgpxvM-ujbkrvDn4" />
+            android:value="@string/map_api" />
 
     </application>
 
