--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.sabzishoppidriverapp">
+    package="com.sabziwaladriverapp">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -14,16 +14,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.map_activity.MapsActivity" />
+        <activity android:name="com.sabziwaladriverapp.ui.map_activity.MapsActivity" />
         <activity
-            android:name=".ui.activity.SplashActivity"
+            android:name="com.sabziwaladriverapp.ui.activity.SplashActivity"
             android:theme="@style/AppTheme.Base">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,11 +31,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.OtpActivity" />
-        <activity android:name=".ui.activity.LoginActivity" />
-        <activity android:name=".ui.activity.MainActivity" />
+        <activity android:name="com.sabziwaladriverapp.ui.activity.OtpActivity" />
+        <activity android:name="com.sabziwaladriverapp.ui.activity.LoginActivity" />
+        <activity android:name="com.sabziwaladriverapp.ui.activity.MainActivity" />
         <activity
-            android:name=".ui.activity.DeliveryListActivity"
+            android:name="com.sabziwaladriverapp.ui.activity.DeliveryListActivity"
             android:label="Job list" />
 
 
